[gd_scene load_steps=105 format=2]

[ext_resource path="res://Sounds/Enemy/Destroyed.mp3" type="AudioStream" id=1]
[ext_resource path="res://assets/loot/HealthDrop.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/Enemy/Shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Player/Footsteps/footstep04.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/customNodes/HurtBox.gd" type="Script" id=5]
[ext_resource path="res://assets/enemies/Enemy.gd" type="Script" id=6]
[ext_resource path="res://assets/shaders/WhiteFlash.gdshader" type="Shader" id=7]
[ext_resource path="res://assets/enemies/ice_particle_white.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/Gun.gd" type="Script" id=9]
[ext_resource path="res://assets/projectiles/Projectile.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/ui/HUD/healthBar/HealthBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sounds/Enemy/Damaged.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0031.png" type="Texture" id=65]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0038.png" type="Texture" id=66]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0039.png" type="Texture" id=67]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0037.png" type="Texture" id=68]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0032.png" type="Texture" id=69]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0034.png" type="Texture" id=70]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0029.png" type="Texture" id=71]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0033.png" type="Texture" id=72]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0036.png" type="Texture" id=73]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0030.png" type="Texture" id=74]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0035.png" type="Texture" id=75]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0001.png" type="Texture" id=76]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0005.png" type="Texture" id=77]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0008.png" type="Texture" id=78]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0009.png" type="Texture" id=79]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0019.png" type="Texture" id=80]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0013.png" type="Texture" id=81]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0022.png" type="Texture" id=82]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0023.png" type="Texture" id=83]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0028.png" type="Texture" id=84]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0018.png" type="Texture" id=85]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0025.png" type="Texture" id=86]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0003.png" type="Texture" id=87]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0015.png" type="Texture" id=88]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0006.png" type="Texture" id=89]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0024.png" type="Texture" id=90]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0000.png" type="Texture" id=91]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0004.png" type="Texture" id=92]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0011.png" type="Texture" id=93]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0010.png" type="Texture" id=94]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0012.png" type="Texture" id=95]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0016.png" type="Texture" id=96]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0017.png" type="Texture" id=97]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0026.png" type="Texture" id=98]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0027.png" type="Texture" id=99]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0014.png" type="Texture" id=100]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0021.png" type="Texture" id=101]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0002.png" type="Texture" id=102]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0020.png" type="Texture" id=103]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0007.png" type="Texture" id=104]
[ext_resource path="res://assets/enemies/animations/Walk/Walk_Animation_DeMain_0040.png" type="Texture" id=105]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0008.png" type="Texture" id=106]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0007.png" type="Texture" id=107]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0012.png" type="Texture" id=108]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0010.png" type="Texture" id=109]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0013.png" type="Texture" id=110]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0011.png" type="Texture" id=111]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0009.png" type="Texture" id=112]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0014.png" type="Texture" id=113]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0000.png" type="Texture" id=114]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0003.png" type="Texture" id=115]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0004.png" type="Texture" id=116]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0005.png" type="Texture" id=117]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0006.png" type="Texture" id=118]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0002.png" type="Texture" id=119]
[ext_resource path="res://assets/enemies/animations/Die/Die_Animation_DeMain_0001.png" type="Texture" id=120]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0011.png" type="Texture" id=121]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0014.png" type="Texture" id=122]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0001.png" type="Texture" id=123]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0004.png" type="Texture" id=124]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0007.png" type="Texture" id=125]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0017.png" type="Texture" id=126]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0016.png" type="Texture" id=127]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0013.png" type="Texture" id=128]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0018.png" type="Texture" id=129]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0009.png" type="Texture" id=130]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0000.png" type="Texture" id=131]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0005.png" type="Texture" id=132]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0010.png" type="Texture" id=133]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0019.png" type="Texture" id=134]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0012.png" type="Texture" id=135]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0008.png" type="Texture" id=136]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0020.png" type="Texture" id=137]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0006.png" type="Texture" id=138]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0015.png" type="Texture" id=139]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0002.png" type="Texture" id=140]
[ext_resource path="res://assets/enemies/animations/Shoot/Shoot_Animation_DeMain_0003.png" type="Texture" id=141]

[sub_resource type="ShaderMaterial" id=23]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 114 ), ExtResource( 120 ), ExtResource( 119 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 107 ), ExtResource( 106 ), ExtResource( 112 ), ExtResource( 109 ), ExtResource( 111 ), ExtResource( 108 ), ExtResource( 110 ), ExtResource( 113 ) ],
"loop": true,
"name": "die",
"speed": 15.0
}, {
"frames": [ ExtResource( 131 ), ExtResource( 123 ), ExtResource( 140 ), ExtResource( 141 ), ExtResource( 124 ), ExtResource( 132 ), ExtResource( 138 ), ExtResource( 125 ), ExtResource( 136 ), ExtResource( 130 ), ExtResource( 133 ), ExtResource( 121 ), ExtResource( 135 ), ExtResource( 128 ), ExtResource( 122 ), ExtResource( 139 ), ExtResource( 127 ), ExtResource( 126 ), ExtResource( 129 ), ExtResource( 134 ), ExtResource( 137 ) ],
"loop": true,
"name": "shoot",
"speed": 21.0
}, {
"frames": [ ExtResource( 91 ), ExtResource( 76 ), ExtResource( 102 ), ExtResource( 87 ), ExtResource( 92 ), ExtResource( 77 ), ExtResource( 89 ), ExtResource( 104 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 94 ), ExtResource( 93 ), ExtResource( 95 ), ExtResource( 81 ), ExtResource( 100 ), ExtResource( 88 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 85 ), ExtResource( 80 ), ExtResource( 103 ), ExtResource( 101 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 90 ), ExtResource( 86 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 84 ), ExtResource( 71 ), ExtResource( 74 ), ExtResource( 65 ), ExtResource( 69 ), ExtResource( 72 ), ExtResource( 70 ), ExtResource( 75 ), ExtResource( 73 ), ExtResource( 68 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 105 ) ],
"loop": true,
"name": "walk",
"speed": 41.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 93.5, 63.0001 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HitParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AggroZone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RangedAggroZone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:gravity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4500.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DestroyedSound:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AnimatedSprite:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimatedSprite:animation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shoot" ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AnimatedSprite:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "destroyed"
length = 2.0
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AggroZone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RangedAggroZone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.96 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:gravity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimatedSprite:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AnimatedSprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.839983 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 14 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimatedSprite:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.909982, 1.95996 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("DestroyedSound:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 2.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=22]
resource_name = "shoot"
length = 0.75
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shoot" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3, 20 ]
}

[sub_resource type="Animation" id=20]
resource_name = "walk2"
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 40 ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "hit"
length = 0.3
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("HitParticles")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -20.0, 20.0, -10.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.413636 ), 0.0, 0.0, 0, 0, Vector2( 0.1875, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.195455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -850.0
linear_accel_random = 0.58
damping = 150.0
damping_random = 0.45
scale = 0.5
scale_curve = SubResource( 11 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 93.5, 63.0001 )

[sub_resource type="CircleShape2D" id=14]
radius = 1091.02

[sub_resource type="CircleShape2D" id=12]
radius = 800.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 517
collision_mask = 4
script = ExtResource( 6 )
moveSpeed = 300.0
stopDistance = 600
healthDrop = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 23 )
position = Vector2( 0, 28 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 19 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.5, 22.9999 )
shape = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/destroyed = SubResource( 18 )
anims/shoot = SubResource( 22 )
anims/walk2 = SubResource( 20 )

[node name="VFXAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 24 )
anims/hit = SubResource( 13 )

[node name="HitParticles" type="Particles2D" parent="."]
emitting = false
amount = 6
lifetime = 0.3
one_shot = true
preprocess = 0.03
explosiveness = 0.87
randomness = 0.55
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 8 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 5.5, 22.9999 )
shape = SubResource( 5 )

[node name="AggroZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 258
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroZone"]
shape = SubResource( 14 )

[node name="RangedAggroZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 258
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangedAggroZone"]
shape = SubResource( 12 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0, -43 )
script = ExtResource( 9 )
projectile = ExtResource( 10 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="Gun"]
pause_mode = 1
stream = ExtResource( 3 )
volume_db = -10.0

[node name="MuzzlePosition" type="Position2D" parent="Gun"]

[node name="Timer" type="Timer" parent="Gun"]
wait_time = 2.0

[node name="HealthBar" parent="." instance=ExtResource( 11 )]
visible = false
margin_left = -25.0
margin_top = -29.0
margin_right = 75.0
margin_bottom = -9.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="StepSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="DamagedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
bus = "Sound Effects"

[node name="DestroyedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0
bus = "Sound Effects"

[connection signal="body_entered" from="AggroZone" to="." method="_on_AggroZone_body_entered"]
[connection signal="body_exited" from="AggroZone" to="." method="_on_AggroZone_body_exited"]
[connection signal="body_entered" from="RangedAggroZone" to="." method="_on_RangedAggroZone_body_entered"]
[connection signal="body_exited" from="RangedAggroZone" to="." method="_on_RangedAggroZone_body_exited"]
[connection signal="shooting" from="Gun" to="." method="_on_Gun_shooting"]
[connection signal="timeout" from="Gun/Timer" to="Gun" method="_on_Timer_timeout"]
[connection signal="healthReachedZero" from="HealthBar" to="." method="_on_HealthBar_healthReachedZero"]
